tests/ui/missing/missing-return.stderr
error[E0308]: mismatched types
  --> $DIR/missing-return.rs:1:11
   |
LL | fn f() -> isize { }
   |    -      ^^^^^ expected `isize`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
